// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden snapshot: seed 1 > matches the recorded snapshot 1`] = `
{
  "affixes": [
    {
      "form": "ra",
      "kind": "derivational",
      "role": "negation",
      "slot": "suffix",
    },
    {
      "form": "is",
      "kind": "derivational",
      "role": "adjective-izer",
      "slot": "suffix",
    },
    {
      "form": "mi",
      "kind": "derivational",
      "role": "place-of",
      "slot": "suffix",
    },
    {
      "form": "at",
      "kind": "inflectional",
      "role": "plural",
      "slot": "suffix",
    },
    {
      "form": "ri",
      "kind": "inflectional",
      "role": "past",
      "slot": "suffix",
    },
    {
      "form": "ru",
      "kind": "inflectional",
      "role": "genitive",
      "slot": "suffix",
    },
    {
      "form": "u",
      "kind": "inflectional",
      "role": "accusative",
      "slot": "suffix",
    },
  ],
  "inventory": {
    "consonants": [
      "p",
      "t",
      "k",
      "b",
      "d",
      "g",
      "s",
      "f",
      "z",
      "m",
      "n",
      "r",
      "l",
      "y",
    ],
    "phonotactics": {
      "allowFinalVowel": false,
      "codas": [
        "m",
        "n",
        "s",
        "l",
        "p",
        "t",
        "b",
      ],
      "maxOnset": 1,
    },
    "vowels": [
      "i",
      "a",
      "u",
    ],
  },
  "lexemeCount": 200,
  "lexemes": [
    {
      "form": "paris",
      "id": "ant",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nimtut",
      "id": "arm",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gun",
      "id": "arrow",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pagibsutap",
      "id": "ash",
      "origin": "compound",
      "parts": [
        "fire",
        "dust",
      ],
      "stress": 1,
    },
    {
      "form": "pab",
      "id": "autumn",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nanzub",
      "id": "axe",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "lifugib",
      "id": "back",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tafabra",
      "id": "bad",
      "origin": "derived",
      "parts": [
        "good",
      ],
      "stress": 1,
    },
    {
      "form": "yus",
      "id": "bark",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ful",
      "id": "bear",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tit",
      "id": "bee",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mil",
      "id": "belly",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ruzildup",
      "id": "berry",
      "origin": "compound",
      "parts": [
        "tree",
        "fruit",
      ],
      "stress": 1,
    },
    {
      "form": "pitdus",
      "id": "big",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "uyam",
      "id": "bind",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "gup",
      "id": "bird",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yunildatra",
      "id": "black",
      "origin": "derived",
      "parts": [
        "white",
      ],
      "stress": 1,
    },
    {
      "form": "isumup",
      "id": "blood",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "agal",
      "id": "boat",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "nitil",
      "id": "bone",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "das",
      "id": "bow",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kibispagib",
      "id": "bread",
      "origin": "compound",
      "parts": [
        "seed",
        "fire",
      ],
      "stress": 1,
    },
    {
      "form": "num",
      "id": "breast",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yilam",
      "id": "breath",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "papput",
      "id": "bridge",
      "origin": "compound",
      "parts": [
        "river",
        "road",
      ],
      "stress": 1,
    },
    {
      "form": "fub",
      "id": "brother",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kuplul",
      "id": "burn",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mut",
      "id": "chief",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "damulbum",
      "id": "child",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "munap",
      "id": "cloth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nut",
      "id": "cloud",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fukitra",
      "id": "cold",
      "origin": "derived",
      "parts": [
        "hot",
      ],
      "stress": 1,
    },
    {
      "form": "takan",
      "id": "come",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bikap",
      "id": "cow",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yatis",
      "id": "cut",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gib",
      "id": "dance",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sulitra",
      "id": "dark",
      "origin": "derived",
      "parts": [
        "light",
      ],
      "stress": 1,
    },
    {
      "form": "kam",
      "id": "daughter",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yuslup",
      "id": "day",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sanyas",
      "id": "death",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tul",
      "id": "deep",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tusabal",
      "id": "deer",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rup",
      "id": "die",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gizap",
      "id": "dog",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kummim",
      "id": "door",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "distilit",
      "id": "dream",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bugin",
      "id": "drink",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sutap",
      "id": "dust",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "biyub",
      "id": "eagle",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nib",
      "id": "ear",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ratup",
      "id": "earth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nuzal",
      "id": "eat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "lufal",
      "id": "egg",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yulra",
      "id": "enemy",
      "origin": "derived",
      "parts": [
        "friend",
      ],
      "stress": 1,
    },
    {
      "form": "uram",
      "id": "evening",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "azus",
      "id": "eye",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "putinum",
      "id": "fall",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sitfil",
      "id": "fat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gum",
      "id": "father",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nuzalgim",
      "id": "feast",
      "origin": "compound",
      "parts": [
        "eat",
        "song",
      ],
      "stress": 1,
    },
    {
      "form": "fal",
      "id": "finger",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pagib",
      "id": "fire",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kikit",
      "id": "fish",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "lipfub",
      "id": "flower",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kut",
      "id": "fly_verb",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sut",
      "id": "foot",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "filufup",
      "id": "forest",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mamut",
      "id": "fox",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yul",
      "id": "friend",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dup",
      "id": "fruit",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pudizil",
      "id": "gift",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "zup",
      "id": "give",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "zusap",
      "id": "go",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "digib",
      "id": "goat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tipup",
      "id": "god",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tafab",
      "id": "good",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gumgapdusfit",
      "id": "grandfather",
      "origin": "compound",
      "parts": [
        "father",
        "old",
      ],
      "stress": 1,
    },
    {
      "form": "kangapdusfit",
      "id": "grandmother",
      "origin": "compound",
      "parts": [
        "mother",
        "old",
      ],
      "stress": 1,
    },
    {
      "form": "tis",
      "id": "grass",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mam",
      "id": "hair",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "lip",
      "id": "hand",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "disib",
      "id": "head",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kuzit",
      "id": "hear",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pudub",
      "id": "heart",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pagibutisas",
      "id": "hearth",
      "origin": "compound",
      "parts": [
        "fire",
        "house",
      ],
      "stress": 1,
    },
    {
      "form": "fufim",
      "id": "heavy",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ban",
      "id": "hill",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tizub",
      "id": "honey",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rubsun",
      "id": "horse",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fukit",
      "id": "hot",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "utisas",
      "id": "house",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "ilas",
      "id": "hunt",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "zirub",
      "id": "husband",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fikamib",
      "id": "ice",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dan",
      "id": "insect",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dampagib",
      "id": "iron",
      "origin": "compound",
      "parts": [
        "stone",
        "fire",
      ],
      "stress": 1,
    },
    {
      "form": "rinzil",
      "id": "kill",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dazun",
      "id": "kin",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fap",
      "id": "king",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kit",
      "id": "knee",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "damyatis",
      "id": "knife",
      "origin": "compound",
      "parts": [
        "stone",
        "cut",
      ],
      "stress": 1,
    },
    {
      "form": "tizan",
      "id": "know",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "zan",
      "id": "lake",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "maful",
      "id": "law",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "zatdip",
      "id": "leaf",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "izan",
      "id": "leg",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "sulit",
      "id": "light",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pagibyib",
      "id": "lightning",
      "origin": "compound",
      "parts": [
        "fire",
        "sky",
      ],
      "stress": 1,
    },
    {
      "form": "gam",
      "id": "liver",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tarim",
      "id": "long",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "milus",
      "id": "luck",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "galal",
      "id": "make",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sup",
      "id": "man",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nugum",
      "id": "meat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mab",
      "id": "milk",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dun",
      "id": "moon",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tib",
      "id": "morning",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kan",
      "id": "mother",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "subus",
      "id": "mountain",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gip",
      "id": "mouse",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gudus",
      "id": "mouth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rigan",
      "id": "mud",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bap",
      "id": "mushroom",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "azub",
      "id": "name",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "gabit",
      "id": "neck",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "libanyup",
      "id": "needle",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "lapbul",
      "id": "net",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gapdusfitra",
      "id": "new",
      "origin": "derived",
      "parts": [
        "old",
      ],
      "stress": 1,
    },
    {
      "form": "yab",
      "id": "night",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "turus",
      "id": "nose",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gapdusfit",
      "id": "old",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kas",
      "id": "owl",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tapra",
      "id": "peace",
      "origin": "derived",
      "parts": [
        "war",
      ],
      "stress": 1,
    },
    {
      "form": "zudap",
      "id": "people",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gidil",
      "id": "pig",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ripzapfip",
      "id": "pot",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "utankun",
      "id": "rain",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "mit",
      "id": "reed",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pap",
      "id": "river",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "put",
      "id": "road",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kissibimutisas",
      "id": "roof",
      "origin": "compound",
      "parts": [
        "wood",
        "house",
      ],
      "stress": 1,
    },
    {
      "form": "gisbup",
      "id": "root_plant",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "niyilup",
      "id": "rope",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dunis",
      "id": "round",
      "origin": "derived",
      "parts": [
        "moon",
      ],
      "stress": 1,
    },
    {
      "form": "pum",
      "id": "run",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rat",
      "id": "salt",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gas",
      "id": "sand",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "zagitpitdus",
      "id": "sea",
      "origin": "compound",
      "parts": [
        "water",
        "big",
      ],
      "stress": 1,
    },
    {
      "form": "dum",
      "id": "season",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pabdil",
      "id": "see",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kibis",
      "id": "seed",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bimsulitra",
      "id": "shadow",
      "origin": "compound",
      "parts": [
        "sun",
        "dark",
      ],
      "stress": 1,
    },
    {
      "form": "damis",
      "id": "sharp",
      "origin": "derived",
      "parts": [
        "stone",
      ],
      "stress": 1,
    },
    {
      "form": "duzit",
      "id": "sheep",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mun",
      "id": "sister",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ribiptam",
      "id": "sit",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kudipat",
      "id": "skin",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yib",
      "id": "sky",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tapbulkat",
      "id": "slave",
      "origin": "compound",
      "parts": [
        "war",
        "take",
      ],
      "stress": 1,
    },
    {
      "form": "nufum",
      "id": "sleep",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pitdusra",
      "id": "small",
      "origin": "derived",
      "parts": [
        "big",
      ],
      "stress": 1,
    },
    {
      "form": "ufan",
      "id": "smoke",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "fizip",
      "id": "snake",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "amab",
      "id": "snow",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "dit",
      "id": "son",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gim",
      "id": "song",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "falpuzun",
      "id": "speak",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "samup",
      "id": "spear",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yutupfum",
      "id": "spirit",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nigam",
      "id": "spring_season",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "upkas",
      "id": "stand",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "upal",
      "id": "star",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "dam",
      "id": "stone",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tat",
      "id": "summer",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bim",
      "id": "sun",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "lim",
      "id": "swim",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bulkat",
      "id": "take",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ruzilzirul",
      "id": "thorn",
      "origin": "compound",
      "parts": [
        "tree",
        "tooth",
      ],
      "stress": 1,
    },
    {
      "form": "yup",
      "id": "thunder",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gamrit",
      "id": "tongue",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "zirul",
      "id": "tooth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pudizilput",
      "id": "trade",
      "origin": "compound",
      "parts": [
        "gift",
        "road",
      ],
      "stress": 1,
    },
    {
      "form": "ruzil",
      "id": "tree",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "zudapdazun",
      "id": "tribe",
      "origin": "compound",
      "parts": [
        "people",
        "kin",
      ],
      "stress": 1,
    },
    {
      "form": "papsubus",
      "id": "valley",
      "origin": "compound",
      "parts": [
        "river",
        "mountain",
      ],
      "stress": 1,
    },
    {
      "form": "gamlap",
      "id": "voice",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "luyis",
      "id": "walk",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "damutisas",
      "id": "wall",
      "origin": "compound",
      "parts": [
        "stone",
        "house",
      ],
      "stress": 1,
    },
    {
      "form": "tap",
      "id": "war",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "zagit",
      "id": "water",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pafib",
      "id": "wheel",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yunildat",
      "id": "white",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rum",
      "id": "wife",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "lulup",
      "id": "wind",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "asum",
      "id": "winter",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "gikin",
      "id": "wolf",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "agum",
      "id": "woman",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "kissibim",
      "id": "wood",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gasyib",
      "id": "worm",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kal",
      "id": "year",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
  ],
  "seed": 1,
}
`;

exports[`golden snapshot: seed 42 > matches the recorded snapshot 1`] = `
{
  "affixes": [
    {
      "form": "e",
      "kind": "derivational",
      "role": "negation",
      "slot": "suffix",
    },
    {
      "form": "u",
      "kind": "derivational",
      "role": "adjective-izer",
      "slot": "suffix",
    },
    {
      "form": "i",
      "kind": "derivational",
      "role": "agent",
      "slot": "suffix",
    },
    {
      "form": "tu",
      "kind": "derivational",
      "role": "diminutive",
      "slot": "suffix",
    },
    {
      "form": "um",
      "kind": "inflectional",
      "role": "plural",
      "slot": "suffix",
    },
    {
      "form": "as",
      "kind": "inflectional",
      "role": "past",
      "slot": "suffix",
    },
    {
      "form": "tu",
      "kind": "inflectional",
      "role": "genitive",
      "slot": "suffix",
    },
  ],
  "inventory": {
    "consonants": [
      "p",
      "t",
      "k",
      "b",
      "d",
      "g",
      "s",
      "f",
      "h",
      "ch",
      "j",
      "m",
      "n",
      "r",
    ],
    "phonotactics": {
      "allowFinalVowel": true,
      "codas": [
        "m",
        "n",
        "s",
        "r",
        "g",
      ],
      "maxOnset": 1,
    },
    "vowels": [
      "i",
      "e",
      "a",
      "o",
      "u",
      "ë",
    ],
  },
  "lexemeCount": 200,
  "lexemes": [
    {
      "form": "huse",
      "id": "ant",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bammi",
      "id": "arm",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "doste",
      "id": "arrow",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "possicha",
      "id": "ash",
      "origin": "compound",
      "parts": [
        "fire",
        "dust",
      ],
      "stress": 1,
    },
    {
      "form": "bonëku",
      "id": "autumn",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "moki",
      "id": "axe",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "icheg",
      "id": "back",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "rehe'e",
      "id": "bad",
      "origin": "derived",
      "parts": [
        "good",
      ],
      "stress": 1,
    },
    {
      "form": "man",
      "id": "bark",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nosuno",
      "id": "bear",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "chun",
      "id": "bee",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "magnëm",
      "id": "belly",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "chëniesberpan",
      "id": "berry",
      "origin": "compound",
      "parts": [
        "tree",
        "fruit",
      ],
      "stress": 1,
    },
    {
      "form": "repe",
      "id": "big",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "his",
      "id": "bind",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "eta",
      "id": "bird",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "ibëe",
      "id": "black",
      "origin": "derived",
      "parts": [
        "white",
      ],
      "stress": 0,
    },
    {
      "form": "are",
      "id": "blood",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "fë",
      "id": "boat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ëperki",
      "id": "bone",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "robo",
      "id": "bow",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "jërsipos",
      "id": "bread",
      "origin": "compound",
      "parts": [
        "seed",
        "fire",
      ],
      "stress": 1,
    },
    {
      "form": "bëse",
      "id": "breast",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sesmijom",
      "id": "breath",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "suchobansë",
      "id": "bridge",
      "origin": "compound",
      "parts": [
        "river",
        "road",
      ],
      "stress": 1,
    },
    {
      "form": "këfi",
      "id": "brother",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "jekurfo",
      "id": "burn",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "munirdin",
      "id": "chief",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sa",
      "id": "child",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gug",
      "id": "cloth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "febin",
      "id": "cloud",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mire",
      "id": "cold",
      "origin": "derived",
      "parts": [
        "hot",
      ],
      "stress": 1,
    },
    {
      "form": "jonmu",
      "id": "come",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "piti",
      "id": "cow",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tëbi",
      "id": "cut",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nibë",
      "id": "dance",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "untumfise",
      "id": "dark",
      "origin": "derived",
      "parts": [
        "light",
      ],
      "stress": 0,
    },
    {
      "form": "dë",
      "id": "daughter",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gem",
      "id": "day",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "chogini",
      "id": "death",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "musën",
      "id": "deep",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "heche",
      "id": "deer",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ropu",
      "id": "die",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sikusri",
      "id": "dog",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nenorcher",
      "id": "door",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "esfi",
      "id": "dream",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "jafunam",
      "id": "drink",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sicha",
      "id": "dust",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "jumgër",
      "id": "eagle",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tagte",
      "id": "ear",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "jedahem",
      "id": "earth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pa",
      "id": "eat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "hamu",
      "id": "egg",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dekëe",
      "id": "enemy",
      "origin": "derived",
      "parts": [
        "friend",
      ],
      "stress": 1,
    },
    {
      "form": "ugfe",
      "id": "evening",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "gaken",
      "id": "eye",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "orë",
      "id": "fall",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "oga",
      "id": "fat",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "jasdog",
      "id": "father",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "patosoman",
      "id": "feast",
      "origin": "compound",
      "parts": [
        "eat",
        "song",
      ],
      "stress": 1,
    },
    {
      "form": "gucha",
      "id": "finger",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pos",
      "id": "fire",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "desfanë",
      "id": "fish",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bor",
      "id": "flower",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ës'hem",
      "id": "fly_verb",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "rëhes",
      "id": "foot",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "febi",
      "id": "forest",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "orëdu",
      "id": "fox",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "dekë",
      "id": "friend",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "esberpan",
      "id": "fruit",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "fegëm",
      "id": "gift",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dëg",
      "id": "give",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tuhu",
      "id": "go",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "deg",
      "id": "goat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "hukë",
      "id": "god",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rehe",
      "id": "good",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "jasdoghuncham",
      "id": "grandfather",
      "origin": "compound",
      "parts": [
        "father",
        "old",
      ],
      "stress": 1,
    },
    {
      "form": "ekënhuncham",
      "id": "grandmother",
      "origin": "compound",
      "parts": [
        "mother",
        "old",
      ],
      "stress": 0,
    },
    {
      "form": "kissa",
      "id": "grass",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tëmnës",
      "id": "hair",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ensom",
      "id": "hand",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "kuta",
      "id": "head",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kerfu",
      "id": "hear",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fugpë",
      "id": "heart",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "posnës",
      "id": "hearth",
      "origin": "compound",
      "parts": [
        "fire",
        "house",
      ],
      "stress": 1,
    },
    {
      "form": "sin",
      "id": "heavy",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "basta",
      "id": "hill",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fafan",
      "id": "honey",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mus",
      "id": "horse",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mir",
      "id": "hot",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nës",
      "id": "house",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kutag",
      "id": "hunt",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gëti",
      "id": "husband",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ersuse",
      "id": "ice",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "be",
      "id": "insect",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nëmkopos",
      "id": "iron",
      "origin": "compound",
      "parts": [
        "stone",
        "fire",
      ],
      "stress": 1,
    },
    {
      "form": "dun",
      "id": "kill",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "purga",
      "id": "kin",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gëfeg",
      "id": "king",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "iri",
      "id": "knee",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "nëmkotëbi",
      "id": "knife",
      "origin": "compound",
      "parts": [
        "stone",
        "cut",
      ],
      "stress": 1,
    },
    {
      "form": "kuha",
      "id": "know",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "suhon",
      "id": "lake",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pahato",
      "id": "law",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "chëhë",
      "id": "leaf",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "akugi",
      "id": "leg",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "untumfis",
      "id": "light",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "posmaki",
      "id": "lightning",
      "origin": "compound",
      "parts": [
        "fire",
        "sky",
      ],
      "stress": 1,
    },
    {
      "form": "mimmem",
      "id": "liver",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gojunno",
      "id": "long",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "desfag",
      "id": "luck",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "chuno",
      "id": "make",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "retemgi",
      "id": "man",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mafo",
      "id": "meat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "chom",
      "id": "milk",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "chumfi",
      "id": "moon",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "jiri",
      "id": "morning",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ekën",
      "id": "mother",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "këran",
      "id": "mountain",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kamche",
      "id": "mouse",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "hig",
      "id": "mouth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ja",
      "id": "mud",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "jigu",
      "id": "mushroom",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gëg",
      "id": "name",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "chemëg",
      "id": "neck",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "chuso",
      "id": "needle",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sem",
      "id": "net",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "hunchame",
      "id": "new",
      "origin": "derived",
      "parts": [
        "old",
      ],
      "stress": 1,
    },
    {
      "form": "mumpigi",
      "id": "night",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bodir",
      "id": "nose",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "huncham",
      "id": "old",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "guder",
      "id": "owl",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nobae",
      "id": "peace",
      "origin": "derived",
      "parts": [
        "war",
      ],
      "stress": 1,
    },
    {
      "form": "gesa",
      "id": "people",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gohe",
      "id": "pig",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tunë",
      "id": "pot",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gi",
      "id": "rain",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "badeschi",
      "id": "reed",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sucho",
      "id": "river",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bansë",
      "id": "road",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "hennës",
      "id": "roof",
      "origin": "compound",
      "parts": [
        "wood",
        "house",
      ],
      "stress": 1,
    },
    {
      "form": "panemfë",
      "id": "root_plant",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mëcham",
      "id": "rope",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "chumfiu",
      "id": "round",
      "origin": "derived",
      "parts": [
        "moon",
      ],
      "stress": 1,
    },
    {
      "form": "kakeg",
      "id": "run",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "denu",
      "id": "salt",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "imchi",
      "id": "sand",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "ihemdemrepe",
      "id": "sea",
      "origin": "compound",
      "parts": [
        "water",
        "big",
      ],
      "stress": 0,
    },
    {
      "form": "rëm",
      "id": "season",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "her",
      "id": "see",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "jërsi",
      "id": "seed",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bijëuntumfise",
      "id": "shadow",
      "origin": "compound",
      "parts": [
        "sun",
        "dark",
      ],
      "stress": 1,
    },
    {
      "form": "nëmkou",
      "id": "sharp",
      "origin": "derived",
      "parts": [
        "stone",
      ],
      "stress": 1,
    },
    {
      "form": "hige",
      "id": "sheep",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bur",
      "id": "sister",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nota",
      "id": "sit",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "finto",
      "id": "skin",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "maki",
      "id": "sky",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nobabërsis",
      "id": "slave",
      "origin": "compound",
      "parts": [
        "war",
        "take",
      ],
      "stress": 1,
    },
    {
      "form": "bes'ho",
      "id": "sleep",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "repe'e",
      "id": "small",
      "origin": "derived",
      "parts": [
        "big",
      ],
      "stress": 1,
    },
    {
      "form": "nohe",
      "id": "smoke",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rimkam",
      "id": "snake",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rede",
      "id": "snow",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "same",
      "id": "son",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tosoman",
      "id": "song",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "hëjos",
      "id": "speak",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mebës",
      "id": "spear",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bostës",
      "id": "spirit",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "jadi",
      "id": "spring_season",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rigu",
      "id": "stand",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kirbe",
      "id": "star",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nëmko",
      "id": "stone",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ohi",
      "id": "summer",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "bijë",
      "id": "sun",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gejes",
      "id": "swim",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bërsis",
      "id": "take",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "chënipohe",
      "id": "thorn",
      "origin": "compound",
      "parts": [
        "tree",
        "tooth",
      ],
      "stress": 1,
    },
    {
      "form": "niharra",
      "id": "thunder",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dëhido",
      "id": "tongue",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pohe",
      "id": "tooth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fegëmbansë",
      "id": "trade",
      "origin": "compound",
      "parts": [
        "gift",
        "road",
      ],
      "stress": 1,
    },
    {
      "form": "chëni",
      "id": "tree",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gesapurga",
      "id": "tribe",
      "origin": "compound",
      "parts": [
        "people",
        "kin",
      ],
      "stress": 1,
    },
    {
      "form": "suchokëran",
      "id": "valley",
      "origin": "compound",
      "parts": [
        "river",
        "mountain",
      ],
      "stress": 1,
    },
    {
      "form": "butë",
      "id": "voice",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "cherfeho",
      "id": "walk",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nëmkonës",
      "id": "wall",
      "origin": "compound",
      "parts": [
        "stone",
        "house",
      ],
      "stress": 1,
    },
    {
      "form": "noba",
      "id": "war",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ihemdem",
      "id": "water",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "sëbe",
      "id": "wheel",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ibë",
      "id": "white",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "gusfis",
      "id": "wife",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sasbiti",
      "id": "wind",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "habësës",
      "id": "winter",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ganjog",
      "id": "wolf",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nugag",
      "id": "woman",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "hen",
      "id": "wood",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "remo",
      "id": "worm",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "non",
      "id": "year",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
  ],
  "seed": 42,
}
`;

exports[`golden snapshot: seed 2026 > matches the recorded snapshot 1`] = `
{
  "affixes": [
    {
      "form": "pëm",
      "kind": "derivational",
      "role": "negation",
      "slot": "prefix",
    },
    {
      "form": "mus",
      "kind": "derivational",
      "role": "adjective-izer",
      "slot": "prefix",
    },
    {
      "form": "to",
      "kind": "derivational",
      "role": "place-of",
      "slot": "prefix",
    },
    {
      "form": "i",
      "kind": "derivational",
      "role": "diminutive",
      "slot": "prefix",
    },
    {
      "form": "go",
      "kind": "inflectional",
      "role": "plural",
      "slot": "prefix",
    },
    {
      "form": "pu",
      "kind": "inflectional",
      "role": "past",
      "slot": "prefix",
    },
    {
      "form": "ë",
      "kind": "inflectional",
      "role": "genitive",
      "slot": "prefix",
    },
    {
      "form": "ye",
      "kind": "inflectional",
      "role": "accusative",
      "slot": "prefix",
    },
  ],
  "inventory": {
    "consonants": [
      "p",
      "t",
      "k",
      "b",
      "d",
      "g",
      "s",
      "f",
      "m",
      "n",
      "r",
      "l",
      "y",
    ],
    "phonotactics": {
      "allowFinalVowel": true,
      "codas": [
        "m",
        "n",
        "s",
        "r",
        "l",
        "p",
        "k",
      ],
      "maxOnset": 1,
    },
    "vowels": [
      "i",
      "e",
      "a",
      "o",
      "u",
      "ë",
    ],
  },
  "lexemeCount": 200,
  "lexemes": [
    {
      "form": "gusoku",
      "id": "ant",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tukel",
      "id": "arm",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tul",
      "id": "arrow",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kayefarbi",
      "id": "ash",
      "origin": "compound",
      "parts": [
        "fire",
        "dust",
      ],
      "stress": 1,
    },
    {
      "form": "nofi",
      "id": "autumn",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tolë",
      "id": "axe",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mëpkër",
      "id": "back",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pëmyonsa",
      "id": "bad",
      "origin": "derived",
      "parts": [
        "good",
      ],
      "stress": 1,
    },
    {
      "form": "nom",
      "id": "bark",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ofë",
      "id": "bear",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "bibim",
      "id": "bee",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dogis",
      "id": "belly",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mutinmusa",
      "id": "berry",
      "origin": "compound",
      "parts": [
        "tree",
        "fruit",
      ],
      "stress": 1,
    },
    {
      "form": "mini",
      "id": "big",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tola",
      "id": "bind",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "lëno",
      "id": "bird",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pëmnel",
      "id": "black",
      "origin": "derived",
      "parts": [
        "white",
      ],
      "stress": 1,
    },
    {
      "form": "sunorful",
      "id": "blood",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kopes",
      "id": "boat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "la",
      "id": "bone",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nenteni",
      "id": "bow",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yipsukaye",
      "id": "bread",
      "origin": "compound",
      "parts": [
        "seed",
        "fire",
      ],
      "stress": 1,
    },
    {
      "form": "pibe",
      "id": "breast",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dëgen",
      "id": "breath",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rëgëdup",
      "id": "bridge",
      "origin": "compound",
      "parts": [
        "river",
        "road",
      ],
      "stress": 1,
    },
    {
      "form": "tëgu",
      "id": "brother",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mifik",
      "id": "burn",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fun",
      "id": "chief",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "oni",
      "id": "child",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "ben",
      "id": "cloth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "angi",
      "id": "cloud",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "pëmaka",
      "id": "cold",
      "origin": "derived",
      "parts": [
        "hot",
      ],
      "stress": 1,
    },
    {
      "form": "sefin",
      "id": "come",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kasdu",
      "id": "cow",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "romrugën",
      "id": "cut",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gokgë",
      "id": "dance",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pëmeniprë",
      "id": "dark",
      "origin": "derived",
      "parts": [
        "light",
      ],
      "stress": 1,
    },
    {
      "form": "dum",
      "id": "daughter",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mëpë",
      "id": "day",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tolo",
      "id": "death",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dëpsu",
      "id": "deep",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nëga",
      "id": "deer",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kate",
      "id": "die",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fum",
      "id": "dog",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "lel",
      "id": "door",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fënkanni",
      "id": "dream",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ludu",
      "id": "drink",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "farbi",
      "id": "dust",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ilgëp",
      "id": "eagle",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "sos",
      "id": "ear",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yifo",
      "id": "earth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "eyar",
      "id": "eat",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "nomi",
      "id": "egg",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pëmdobus",
      "id": "enemy",
      "origin": "derived",
      "parts": [
        "friend",
      ],
      "stress": 1,
    },
    {
      "form": "tofë",
      "id": "evening",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "lunmën",
      "id": "eye",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yum",
      "id": "fall",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sutu",
      "id": "fat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "doya",
      "id": "father",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "eyarda",
      "id": "feast",
      "origin": "compound",
      "parts": [
        "eat",
        "song",
      ],
      "stress": 0,
    },
    {
      "form": "kugok",
      "id": "finger",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kaye",
      "id": "fire",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "oye",
      "id": "fish",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "pesi",
      "id": "flower",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yur",
      "id": "fly_verb",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "subesdo",
      "id": "foot",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bëkrun",
      "id": "forest",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pare",
      "id": "fox",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dobus",
      "id": "friend",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "musa",
      "id": "fruit",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "femlene",
      "id": "gift",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "risomi",
      "id": "give",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "amom",
      "id": "go",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "nete",
      "id": "goat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bane",
      "id": "god",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yonsa",
      "id": "good",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "doyasalole",
      "id": "grandfather",
      "origin": "compound",
      "parts": [
        "father",
        "old",
      ],
      "stress": 1,
    },
    {
      "form": "kotubisalole",
      "id": "grandmother",
      "origin": "compound",
      "parts": [
        "mother",
        "old",
      ],
      "stress": 1,
    },
    {
      "form": "ki",
      "id": "grass",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nendu",
      "id": "hair",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rusan",
      "id": "hand",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ses",
      "id": "head",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "uyëp",
      "id": "hear",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "kës",
      "id": "heart",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kayesum",
      "id": "hearth",
      "origin": "compound",
      "parts": [
        "fire",
        "house",
      ],
      "stress": 1,
    },
    {
      "form": "age",
      "id": "heavy",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "lëgë",
      "id": "hill",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dul",
      "id": "honey",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rogak",
      "id": "horse",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "aka",
      "id": "hot",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "sum",
      "id": "house",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fe",
      "id": "hunt",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "linlu",
      "id": "husband",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "këptop",
      "id": "ice",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dimada",
      "id": "insect",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "galokaye",
      "id": "iron",
      "origin": "compound",
      "parts": [
        "stone",
        "fire",
      ],
      "stress": 1,
    },
    {
      "form": "dëssa",
      "id": "kill",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nik",
      "id": "kin",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tisë",
      "id": "king",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kolu",
      "id": "knee",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "galoromrugën",
      "id": "knife",
      "origin": "compound",
      "parts": [
        "stone",
        "cut",
      ],
      "stress": 1,
    },
    {
      "form": "golu",
      "id": "know",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "denop",
      "id": "lake",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fefi",
      "id": "law",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kënsë",
      "id": "leaf",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "girye",
      "id": "leg",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "eniprë",
      "id": "light",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "kayegegëpë",
      "id": "lightning",
      "origin": "compound",
      "parts": [
        "fire",
        "sky",
      ],
      "stress": 1,
    },
    {
      "form": "ikbok",
      "id": "liver",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "buri",
      "id": "long",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sufa",
      "id": "luck",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bubu",
      "id": "make",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dadë",
      "id": "man",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "murtë",
      "id": "meat",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nopsa",
      "id": "milk",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nu",
      "id": "moon",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pin",
      "id": "morning",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kotubi",
      "id": "mother",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rëku",
      "id": "mountain",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kima",
      "id": "mouse",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tadop",
      "id": "mouth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ëda",
      "id": "mud",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "na",
      "id": "mushroom",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "letude",
      "id": "name",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "miyap",
      "id": "neck",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "fosbi",
      "id": "needle",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "lëltë",
      "id": "net",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pëmsalole",
      "id": "new",
      "origin": "derived",
      "parts": [
        "old",
      ],
      "stress": 1,
    },
    {
      "form": "obu",
      "id": "night",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "ronfër",
      "id": "nose",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "salole",
      "id": "old",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ba",
      "id": "owl",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "pëmduli",
      "id": "peace",
      "origin": "derived",
      "parts": [
        "war",
      ],
      "stress": 1,
    },
    {
      "form": "mippe",
      "id": "people",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sënëte",
      "id": "pig",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kuski",
      "id": "pot",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yola",
      "id": "rain",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "neya",
      "id": "reed",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rëgë",
      "id": "river",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dup",
      "id": "road",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bolosum",
      "id": "roof",
      "origin": "compound",
      "parts": [
        "wood",
        "house",
      ],
      "stress": 1,
    },
    {
      "form": "së",
      "id": "root_plant",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "som",
      "id": "rope",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "musnu",
      "id": "round",
      "origin": "derived",
      "parts": [
        "moon",
      ],
      "stress": 1,
    },
    {
      "form": "gerap",
      "id": "run",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ekësya",
      "id": "salt",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "repol",
      "id": "sand",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gëlikmini",
      "id": "sea",
      "origin": "compound",
      "parts": [
        "water",
        "big",
      ],
      "stress": 1,
    },
    {
      "form": "iyu",
      "id": "season",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "rele",
      "id": "see",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yipsu",
      "id": "seed",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "furopëmeniprë",
      "id": "shadow",
      "origin": "compound",
      "parts": [
        "sun",
        "dark",
      ],
      "stress": 1,
    },
    {
      "form": "musgalo",
      "id": "sharp",
      "origin": "derived",
      "parts": [
        "stone",
      ],
      "stress": 1,
    },
    {
      "form": "rube",
      "id": "sheep",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "omo",
      "id": "sister",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "tëmfor",
      "id": "sit",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "begas",
      "id": "skin",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gegëpë",
      "id": "sky",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "dulikayë",
      "id": "slave",
      "origin": "compound",
      "parts": [
        "war",
        "take",
      ],
      "stress": 1,
    },
    {
      "form": "ëpu",
      "id": "sleep",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "pëmmini",
      "id": "small",
      "origin": "derived",
      "parts": [
        "big",
      ],
      "stress": 1,
    },
    {
      "form": "oguki",
      "id": "smoke",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "rokma",
      "id": "snake",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kido",
      "id": "snow",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "kinak",
      "id": "son",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "da",
      "id": "song",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yaga",
      "id": "speak",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ril",
      "id": "spear",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "sim",
      "id": "spirit",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "uno",
      "id": "spring_season",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "lor",
      "id": "stand",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "talu",
      "id": "star",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "galo",
      "id": "stone",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gidin",
      "id": "summer",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "furo",
      "id": "sun",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "oyë",
      "id": "swim",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "kayë",
      "id": "take",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mutinroppum",
      "id": "thorn",
      "origin": "compound",
      "parts": [
        "tree",
        "tooth",
      ],
      "stress": 1,
    },
    {
      "form": "gipper",
      "id": "thunder",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yiron",
      "id": "tongue",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "roppum",
      "id": "tooth",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "femlenedup",
      "id": "trade",
      "origin": "compound",
      "parts": [
        "gift",
        "road",
      ],
      "stress": 1,
    },
    {
      "form": "mutin",
      "id": "tree",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "mippenik",
      "id": "tribe",
      "origin": "compound",
      "parts": [
        "people",
        "kin",
      ],
      "stress": 1,
    },
    {
      "form": "rëgërëku",
      "id": "valley",
      "origin": "compound",
      "parts": [
        "river",
        "mountain",
      ],
      "stress": 1,
    },
    {
      "form": "lël",
      "id": "voice",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "yuripke",
      "id": "walk",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "galosum",
      "id": "wall",
      "origin": "compound",
      "parts": [
        "stone",
        "house",
      ],
      "stress": 1,
    },
    {
      "form": "duli",
      "id": "war",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gëlik",
      "id": "water",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ipyi",
      "id": "wheel",
      "origin": "root",
      "parts": null,
      "stress": 0,
    },
    {
      "form": "nel",
      "id": "white",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "suki",
      "id": "wife",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "ni",
      "id": "wind",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "nepka",
      "id": "winter",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "gipse",
      "id": "wolf",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rekkor",
      "id": "woman",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "bolo",
      "id": "wood",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "tëmsis",
      "id": "worm",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
    {
      "form": "rop",
      "id": "year",
      "origin": "root",
      "parts": null,
      "stress": 1,
    },
  ],
  "seed": 2026,
}
`;
